feat: polish docs and fix mobile services